<resources>
    <string name="app_name">Yourfit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- MENU -->
    <string name="menu_home">Тренировки</string>
    <string name="menu_programs">Программы</string>
    <string name="menu_measurements">Замеры</string>
    <string name="menu_exercises">Каталог упражнений</string>
    <string name="menu_notifications">Уведомления</string>
    <string name="menu_settings">Настройки</string>
</resources>
