<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/nav_primary" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_fire"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_programs"
            android:icon="@drawable/ic_success"
            android:title="@string/menu_programs" />
        <item
            android:id="@+id/nav_measurements"
            android:icon="@drawable/ic_ruler"
            android:title="@string/menu_measurements" />
        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/ic_weightlifting"
            android:title="@string/menu_exercises" />
    </group>

    <group android:id="@+id/nav_secondary" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_work_tool"
            android:title="@string/menu_settings" />
    </group>
</menu>