<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="online.yourfit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_programs"
        android:name="online.yourfit.ui.programs.ProgramsFragment"
        android:label="@string/menu_programs"
        tools:layout="@layout/fragment_programs" />

    <fragment
        android:id="@+id/nav_exercises"
        android:name="online.yourfit.ui.exercises.ExercisesFragment"
        android:label="@string/menu_exercises"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/nav_measurements"
        android:name="online.yourfit.ui.measurements.MeasurementsFragment"
        android:label="@string/menu_measurements"
        tools:layout="@layout/fragment_measurements" />
</navigation>